--- a/src/app/components/membresia-user/membresia-user.component.html
+++ b/src/app/components/membresia-user/membresia-user.component.html
@@ -1,21 +1,10 @@
-<header class="container__header">
-    <div class="container__menu">
-      <img class="container__menu-menu" src="../../../assets/responsive/menu-svgrepo-com.svg" (click)="openMenu()" alt="">
-    </div>
-    <nav class="header__nav" >
-      <ul class="header__nav-enlaces" *ngIf="isOpen">
-        <li><a class="header__nav-enlaces-a" routerLink="/">inicio</a></li>
-        <li><a class="header__nav-enlaces-a" >registrarse</a></li>
-        <li><a class="header__nav-enlaces-a">nosotros</a></li>
-        <li><a class="header__nav-enlaces-a" routerLink="/membresia">membresia</a></li>
-        <li><a class="header__nav-enlaces-a">contactanos</a></li>
-      </ul>
-    </nav>
-</header>
+<section>
+    <app-menu-responsive [logo]=true [buscador]=true></app-menu-responsive>
+</section>
 <div class="section__main">
     <section class="section__titulo">
         <h1 class="section__titulo-titulo">SELECCIONA TU MEMBRESIA</h1>
-        <p class="section__titulo-subtitulo">A la hora de abonar, asegurate que tu paypal sea la misma que tu registro</p>
+        <p class="section__titulo-subtitulo">Tu membresia se renueva automaticamente, para cancelar envianos un mensaje a: <a href="mailto:admin@remixmp4.com">admin@remixmp4.com</a></p>
     </section>
     <section class="section__membresia">
         <div class="container__membresia" *ngFor="let plan of cardMembresiaList">
@@ -32,6 +21,9 @@
             </div>
         </div>
     </section>
+    <div class="container__buttom-regresar">
+        <app-boton-regresar class="container__buttom-regresar-btn" [rutaCustom]="rutaCustom"></app-boton-regresar>
+    </div>
 </div>
 <section>
     <app-footer></app-footer>
