--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -6,11 +6,13 @@
     flex-direction: column;
     font-family: sans-serif;
     padding-bottom: 3em;
+    position: relative;
     .footer__logo-footer{
         width: 12em;
         height: 6em;
     }
     .footer__redes{
+        margin-top: 2.5em;
         .footer__redes-facebook{
             width: 2em;
             height: 2em;
@@ -27,6 +29,8 @@
     }
     .text-copyright{
         font-size: 0.9em;
+        font-weight: bold;
+        letter-spacing: 1px;
     }
     .footer__enlaces{
         display: flex;
@@ -34,6 +38,7 @@
         justify-content: center;
         font-size: 0.9em;
         padding: 0;
+        cursor: pointer;
         &-link{
             margin: 0 1em;
             &-a{
@@ -44,7 +49,7 @@
                 text-decoration: underline;
             }
         }
-    }
+    } 
 }
 
 @media only screen and (max-width: 380px) {
