--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -25,22 +25,26 @@
     background-size: cover;
     background-position-y: 4em;
     background-position-x: center;
-    
+    .container__menu{
+        display: none;
+    }
     .header__nav{
         display: flex;
         justify-content: center;
         position: fixed;
         width: 100%;
         z-index: 5;
+        background: #000000db;
+        backdrop-filter: blur(5px);
         .header__nav-enlaces{
             list-style: none;
             display: flex;
             text-transform: uppercase;
             justify-content: center;
             padding: 0;
+            background: transparent;
             li{
                 width: min-content;
-                font-size: 1em;
                 display: flex;
                 align-items: center;
                 margin: 0 0.6em;
@@ -50,18 +54,19 @@
                 float: none;
                 padding-top: 0;
                 padding-bottom: 0;
-                font-family: 'MonumentExtended_Regular';
-                
+                background: transparent;
                 .header__nav-enlaces-a{
                     text-decoration: none;
                     color: #fff;
                     text-align: inherit;
                     line-height: 25.6px;
                     word-spacing: 0px;
-                    letter-spacing: 0px;
-                    font-weight: 600;
+                    letter-spacing: 2px;
+                    font-weight: 100;
                     font-style: normal;
-                    font-size: 16px;
+                    font-size: 18px;
+                    font-family: 'MonumentExtended_Regular';
+                    background: transparent;
                 }
                 ::after{
                     content: "";
@@ -111,6 +116,7 @@
             margin: 0;
             font-family: 'MonumentExtended_Regular';
             background: transparent;
+            text-align: center;
         }
         .titulo__segundo{
             font-size: 3.5em;
@@ -121,6 +127,7 @@
             font-family: "Hanson_Bold";
             background: transparent;
             line-height: 0.9em;
+            text-align: center;
         }
         .titulo__button-ingresar{
             color: #fff;
@@ -128,12 +135,13 @@
             width: 209px;
             height: 51px;
             cursor: pointer;
-            font-size: 1.3em;
+            font-size: 20px;
             text-transform: uppercase;
             font-weight: bold;
             border-radius: 30px;
+            letter-spacing: 3px;
             border: none;
-            margin-top: 2.5em;
+            margin-top: 3em;
             font-family: "Hanson_Bold";
             display: flex;
             align-items: center;
@@ -150,7 +158,8 @@
     }
 }
 .container__sliderMain{
-    padding: 3em 0 13em 0;
+    padding: 3em 0 4em 0;
+    background: transparent;
     &-swiper{
         margin-bottom: 4em;
         &-container{
@@ -197,7 +206,7 @@
     }
 }
 .container__opiniones{
-    margin-bottom: 9em;
+    margin-bottom: 5em;
     
     .opiniones__titulo{
         display: flex;
@@ -354,7 +363,7 @@
                     }
                     &-btn{
                         background: #000;
-                        border: 2px solid #ff3100;
+                        border: 2px solid #ffffff;
                         color: #fff;
                         border-radius: 20px;
                         width: 28%;
@@ -372,8 +381,8 @@
                         transition: .4s ease-in-out;
                     }
                     &-btn:hover{
-                        background: #ff3100;
-                        color: #fff;
+                        border: 2px solid #ff3100;
+                        color: #ff3100;
                     }
                     :hover{
                         border-bottom: 2px solid #ff3100;
@@ -405,7 +414,7 @@
     background: #ff3100;
     transform:scaleX(0.95);
 }
-@media only screen and (min-width: 330px) and (max-width: 576px) {
+@media only screen and (min-width: 230px) and (max-width: 576px) {
     .container__header{
         .container__menu{
             display: flex;
@@ -422,6 +431,8 @@
             justify-content: initial;
             display: block;
             transition: 1s ease-in;
+            backdrop-filter: none;
+            background: transparent;
             .header__nav-enlaces{
                 flex-direction: column;
                 transition: 1s ease-out;
@@ -432,6 +443,8 @@
                 width: 100%;
                 font-size: 1.6em;
                 line-height: 2em;
+                background: #000000db;
+                backdrop-filter: blur(5px);
                 &-li &a{
                     text-decoration: none;   
                 }
@@ -527,12 +540,13 @@
                 width: 3em;
                 height: 3em;
             }
-            
         }
         .header__nav{
             display: block;
             transition: 1s ease-in;
             position: initial;
+            backdrop-filter: none;
+            background: transparent;
             .header__nav-enlaces{
                 display: flex;
                 flex-direction: column;
@@ -542,6 +556,8 @@
                 line-height: 2em;
                 position: absolute;
                 margin: 0;
+                background: #000000db;
+                backdrop-filter: blur(5px);
             }
         }
         .container__titulo{
