--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -4,13 +4,29 @@
             
             <form class="contacto__formulario-formulario" action="">
               <img class="contacto__formulario-formulario-times__close" (click)="closeModal()" src="../../../assets/times-close.svg" alt="">
-              <h3 class="formulario__titulo">registrate</h3>
-              <input class="contacto__formulario-formulario-campos"type="text" placeholder="Nombre">
-              <input class="contacto__formulario-formulario-campos" type="text" placeholder="Contraseña">
-              <input class="contacto__formulario-formulario-campos" type="text" placeholder="Repita Contraseña">
-                
-              <input type="checkbox" id="check1" checked/>
-              <label for="check1" class="contacto__formulario-formulario-label">Acepto Terminos y Condiciones</label>
+              <div class="contacto__formulario-formulario-titulo">
+                <img src="../../../assets/logo r.png" alt="">
+                <h3 class="formulario__titulo">Registrate</h3>
+              </div>
+              <input class="contacto__formulario-formulario-campos"type="text" placeholder="Nombre">   
+              <div class="formulario__input-password">
+                <input class="contacto__formulario-formulario-campos" type={{selectType}}  placeholder="Contraseña">
+                <svg (click)="passwordOcult()" width="64px" height="64px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="style=linear"> <g id="eye-close"> 
+                  <path id="vector" d="M15.6487 5.39489C14.4859 4.95254 13.2582 4.72021 12 4.72021C8.46997 4.72021 5.17997 6.54885 2.88997 9.71381C1.98997 10.9534 1.98997 13.037 2.88997 14.2766C3.34474 14.9051 3.83895 15.481 4.36664 16.0002M19.3248 7.69653C19.9692 8.28964 20.5676 8.96425 21.11 9.71381C22.01 10.9534 22.01 13.037 21.11 14.2766C18.82 17.4416 15.53 19.2702 12 19.2702C10.6143 19.2702 9.26561 18.9884 7.99988 18.4547" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path id="vector_2" d="M15 12C15 13.6592 13.6592 15 12 15M14.0996 9.85541C13.5589 9.32599 12.8181 9 12 9C10.3408 9 9 10.3408 9 12C9 12.7293 9.25906 13.3971 9.69035 13.9166" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> <path id="vector__eyes" *ngIf="(selectType == 'password')" d="M2 21.0002L22 2.7002" stroke="#fff" stroke-width="1.5" stroke-linecap="round"></path> </g> </g> </g></svg>
+              </div>
+              <div class="formulario__input-password">
+                <input class="contacto__formulario-formulario-campos" type={{selectTypeRepeat}}  placeholder="Repita contraseña">
+                <svg (click)="passwordOcultRepeat()" width="64px" height="64px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="style=linear"> <g id="eye-close"> 
+                  <path id="vector" d="M15.6487 5.39489C14.4859 4.95254 13.2582 4.72021 12 4.72021C8.46997 4.72021 5.17997 6.54885 2.88997 9.71381C1.98997 10.9534 1.98997 13.037 2.88997 14.2766C3.34474 14.9051 3.83895 15.481 4.36664 16.0002M19.3248 7.69653C19.9692 8.28964 20.5676 8.96425 21.11 9.71381C22.01 10.9534 22.01 13.037 21.11 14.2766C18.82 17.4416 15.53 19.2702 12 19.2702C10.6143 19.2702 9.26561 18.9884 7.99988 18.4547" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path id="vector_2" d="M15 12C15 13.6592 13.6592 15 12 15M14.0996 9.85541C13.5589 9.32599 12.8181 9 12 9C10.3408 9 9 10.3408 9 12C9 12.7293 9.25906 13.3971 9.69035 13.9166" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> <path id="vector__eyes" *ngIf="(selectTypeRepeat == 'password')" d="M2 21.0002L22 2.7002" stroke="#fff" stroke-width="1.5" stroke-linecap="round"></path> </g> </g> </g></svg>
+              </div>
+              
+              <div class="container__inputcheck">
+                <input type="checkbox" id="check1"/>
+                <label for="check1" class="contacto__formulario-formulario-label">Acepto </label>
+                <p (click)="abrirModal()">terminos y condiciones</p>
+              </div>
               <button class="contacto__formulario-formulario-btn" >Aceptar</button>
             </form>  
           </div>
