--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -22,7 +22,6 @@
             display: flex;
             flex-direction: column;
             background-color: #000;
-            width: 35%;
             .formulario__titulo{
                 color: #fff;
                 display: flex;
@@ -41,7 +40,7 @@
                 gap: 20px;
                 background-color: #000;
                 border: 2px solid #fff;
-                padding: 0.8em 5em 4em 5em;
+                padding: 0.8em 2em 4em 2em;
                 position: relative;
                     &-times__close{
                         width: 30px;
@@ -49,6 +48,42 @@
                         right: 12px;
                         top: 12px;
                         cursor: pointer;
+                    }
+                    .formulario__input-password{
+                        input{
+                            position: relative;
+                            width: 95%;
+                            margin-right: -3em;
+                        }
+                        svg{
+                            width: 1.8em;
+                            height: 1.8em;
+                            position: absolute;
+                            cursor: pointer;
+                        }
+
+                    }
+                    .contacto__formulario-formulario-titulo{
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        img{
+                            width: 10em;
+                            height: 6em;
+                        }
+                        .formulario__titulo{
+                            color: #fff;
+                            display: flex;
+                            justify-content: center;
+                            text-transform: uppercase;
+                            letter-spacing: 1px;
+                            font-size: 2em;
+                            font-weight: bold;
+                            font-family: 'Hanson_Bold';
+                            margin-top: 1.2em;
+                            padding-bottom: 0;
+                            line-height: 0;
+                        }
                     }
                     .contacto__formulario-formulario-campos{
                         padding: 10px;
@@ -61,8 +96,27 @@
                         font-family: Arial, Helvetica, sans-serif;
                         letter-spacing: 1.2px;
                         color:#d1d1d1;
+                            &:hover{
+                                border-bottom: 2px solid #ff3100;
+                                border-left: 2px solid #ff3100;
+                            }
+                    }
+                    .container__inputcheck{
+                        display: flex;
+                        p{
+                            color: #fff;
+                            padding-left: 5px;
+                            font-family: "MonumentExtended_Regular";
+                            font-size: 0.9em;
+                            letter-spacing: 1px;
+                            text-transform: uppercase;
+                            cursor: pointer;
+                            &:hover{
+                                color: #ff3100;
+                            }
                         }
-                        &-btn{
+                    }
+                     &-btn{
                             background: transparent;
                             border: 2px solid #fff;
                             color: #fff;
@@ -80,26 +134,25 @@
                             cursor: pointer;
                             transition: 0.1s ease-out;
                             justify-self: center;
-                        }
-                        &-btn:hover{
-                            border: 2px solid #ff3100;
-                            color: #ff3100;
-                        }
-                        :focus{
-                            outline:none;
-                            border-bottom: 2px solid #ff3100;
-                            border-left: 2px solid #ff3100;
-                        }
+                    }
+                    &-btn:hover{
+                        border: 2px solid #ff3100;
+                        color: #ff3100;
+                    }
+                    :focus{
+                        outline:none;
+                        border-bottom: 2px solid #ff3100;
+                        border-left: 2px solid #ff3100;
+                    }
             }
-            
-            
         }
     }
 }
+
 label:before{
     content: "";
     background: transparent;
-    border: 2px solid #ffffff;
+    border: 2px solid #fff;
     display: inline-block;
     margin-right: 15px;
     text-align: center;
@@ -112,8 +165,19 @@ label:before{
     transform: translateY(-100vh);
 }
 .contacto__formulario-formulario-label{
+    display: flex;
+    align-items: center;
     color: #fff;
     font-family: sans-serif;
+    p{
+        padding-left: 9px;
+        &:hover{
+            color: #ff3100;
+        }
+    }
+}
+.contacto__formulario-formulario-label::after+:hover{
+        color: #ff3100;
 }
 input[type=checkbox]{
     display: none;
@@ -121,11 +185,16 @@ input[type=checkbox]{
 }
 input[type=checkbox] + .contacto__formulario-formulario-label{
     cursor: pointer;
+
+    font-family: "MonumentExtended_Regular";
+    font-size: 0.9em;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: all .2 ease-in-out;
 }
 input[type=checkbox]:checked + .contacto__formulario-formulario-label:before{
     content: url(../../../assets/check.svg);
     font-size: 20px;
-    font-family:'Times New Roman';
     color:#88c64b;
 }
 @media only screen and (min-width: 350px) and (max-width : 767px){
