--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,45 +1,12 @@
-
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat.core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$maquetacion-angular-primary: mat.define-palette(mat.$indigo-palette);
-$maquetacion-angular-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$maquetacion-angular-warn: mat.define-palette(mat.$red-palette);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$maquetacion-angular-theme: mat.define-light-theme((
-  color: (
-    primary: $maquetacion-angular-primary,
-    accent: $maquetacion-angular-accent,
-    warn: $maquetacion-angular-warn,
-  )
-));
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include mat.all-component-themes($maquetacion-angular-theme);
-
 @import 'swiper/scss';
 @import 'swiper/scss/navigation';
 @import 'swiper/scss/pagination';
+@import 'swiper/css/autoplay';
 @import 'aos/dist/aos.css';
 
 *{
     background-color: #000;
+    scroll-behavior: smooth;
 }
 @font-face {
   font-family: 'Hanson_Bold';
@@ -52,6 +19,10 @@ $maquetacion-angular-theme: mat.define-light-theme((
 @font-face {
   font-family: 'MonumentExtended_Bold';
   src: url('assets/fonts/monumentextended-ultrabold.otf'); 
+}
+@font-face {
+  font-family: 'Nexa-Bold';
+  src: url('assets/fonts/Nexa-Bold.otf'); 
 }
 body{
     padding: 0;
